# turboquant-explained

./: .gitignore  README.md  index.html  script.js  styles.css
.github/workflows/: pages.yml
android/TurboQuantBench/: build.gradle  local.properties.example  settings.gradle
android/TurboQuantBench/app/: build.gradle
android/TurboQuantBench/native/: Cargo.toml
docs/: ANDROID_APP.md  BENCHMARK_RESULTS.md
releases/android/: TurboQuantBench-release.apk  vecdb-release-v0.3.apk  vecdb-release-v0.5.apk
turbovec/.cargo/: config.toml
turbovec/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
turbovec/.github/workflows/: ci.yml  release-crates.yml  release-pypi.yml
turbovec/benchmarks/: create_diagrams.py  download_data.py
turbovec/benchmarks/results/: compression.json  speed_d1536_2bit_arm_mt.json  speed_d1536_2bit_arm_st.json  speed_d1536_2bit_x86_mt.json  speed_d1536_2bit_x86_st.json  speed_d1536_4bit_arm_mt.json  speed_d1536_4bit_arm_st.json  speed_d1536_4bit_x86_mt.json  speed_d1536_4bit_x86_st.json  speed_d3072_2bit_arm_mt.json  speed_d3072_2bit_arm_st.json  speed_d3072_2bit_x86_mt.json  speed_d3072_2bit_x86_st.json  speed_d3072_4bit_arm_mt.json  speed_d3072_4bit_arm_st.json  speed_d3072_4bit_x86_mt.json  speed_d3072_4bit_x86_st.json
turbovec/benchmarks/suite/: compression.py  recall_d1536_2bit.py  recall_d1536_4bit.py  recall_d3072_2bit.py  recall_d3072_4bit.py  recall_glove_2bit.py  (+17 more)
turbovec/examples/downstream-smoke/: Cargo.toml
turbovec/examples/downstream-smoke/src/: main.rs
turbovec/turbovec/: build.rs
turbovec/turbovec-python/: build.rs
(+36 files in other folders)
